--- a/index.html
+++ b/index.html
@@ -14,43 +14,45 @@
 <body>
     <div class="main">
         <div class="wrapper">
-            <div class="title">
-                <h1>10,000+ of our users love our products.</h1>
-                <p>We only provide great products combined with excellent
-                    customer service. See what our satisfied customers
-                    are saying about our services.
-                </p>
-            </div>
-            <div class="stars-reviews">
-                <div class="card-review">
-                    <div class="stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                    </div>
-                    <p>Rated 5 Stars in Reviews</p>
+            <div class="top-section">
+                <div class="title">
+                    <h1>10,000+ of our users love our products.</h1>
+                    <p>We only provide great products combined with excellent
+                        customer service. See what our satisfied customers
+                        are saying about our services.
+                    </p>
                 </div>
-                <div class="card-review">
-                    <div class="stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
+                <div class="stars-reviews">
+                    <div class="card-review" id="card-review1">
+                        <div class="stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                        </div>
+                        <p>Rated 5 Stars in Reviews</p>
                     </div>
-                    <p>Rated 5 Stars in Report Guru</p>
-                </div>
-                <div class="card-review">
-                    <div class="stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
-                        <img src="assets/images/icon-star.svg" alt="5 stars">
+                    <div class="card-review" id="card-review2">
+                        <div class="stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                        </div>
+                        <p>Rated 5 Stars in Report Guru</p>
                     </div>
-                    <p>Rated 5 Stars in BestTech</p>
+                    <div class="card-review">
+                        <div class="stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                            <img src="assets/images/icon-star.svg" alt="5 stars">
+                        </div>
+                        <p>Rated 5 Stars in BestTech</p>
+                    </div>
                 </div>
             </div>
             <div class="bottom-section">
@@ -69,7 +71,7 @@
                         Excellent!"
                     </p>
                 </div>
-                <div class="card">
+                <div class="card" id="card2">
                     <div class="profil">
                         <img src="assets/images/image-irene.jpg" alt="Irene pic">
                         <div class="profil-info">
@@ -83,7 +85,7 @@
                         of the purchase and the speed of delivery."
                     </p>
                 </div>
-                <div class="card">
+                <div class="card" id="card3">
                     <div class="profil">
                         <img src="assets/images/image-anne.jpg" alt="Anne pic">
                         <div class="profil-info">
@@ -100,8 +102,8 @@
             </div>
         </div>
     </div>
-    <!-- <footer>
+    <footer>
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Yohan Baes</a>.
-    </footer> -->
+    </footer>
 </body>
 </html>
