--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
-    <title>Frontend Mentor | Social proof section</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');
     </style> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
+    <title>Frontend Mentor | Social proof section</title>
 </head>
 <body>
-    <div class="main">
+    <main class="main">
         <div class="wrapper">
             <div class="top-section">
                 <div class="title">
@@ -101,7 +101,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <footer>
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Yohan Baes</a>.
     </footer>
